<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.evgeny.githubclient.viewmodel.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:id="@+id/login_main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <RelativeLayout
            android:id="@+id/login_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/login_main_container_padding_left"
            android:paddingTop="@dimen/login_main_container_padding_top"
            android:paddingRight="@dimen/login_main_container_padding_right"
            android:paddingBottom="@dimen/login_main_container_padding_bottom">

            <LinearLayout
                android:id="@+id/login_field_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/login_field_container_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size" />

                <com.example.evgeny.githubclient.view.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/custom_edit_text_height"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:background="@drawable/custom_edit_text_selector"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/login_edit_text_side_padding"
                    android:paddingRight="@dimen/login_edit_text_side_padding"
                    android:singleLine="true"
                    android:text="@={viewModel.login}"
                    android:imeOptions="flagNoExtractUi"
                    android:textColor="@color/colorDesignDarkGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:text="@string/password"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size" />

                <com.example.evgeny.githubclient.view.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/custom_edit_text_height"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:background="@drawable/custom_edit_text_selector"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/login_edit_text_side_padding"
                    android:paddingRight="@dimen/login_edit_text_side_padding"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:imeOptions="flagNoExtractUi"
                    android:textColor="@color/colorDesignDarkGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:text="@string/you_can"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:background="@drawable/custom_button_selector"
                    android:onClick="@{()->viewModel.onLoginButtonClicked()}"
                    android:text="@string/authorize"
                    android:textAllCaps="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:text="@string/or"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/login_view_margin_top"
                    android:background="@drawable/dark_custom_button_selector"
                    android:onClick="@{()->viewModel.onPassIncognitoButtonClicked()}"
                    android:text="@string/pass_incognito"
                    android:textAllCaps="false" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>