<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.evgeny.githubclient.model.blogic.RepositoryData" />

        <import type="android.view.View" />
    </data>

        <RelativeLayout
            android:id="@+id/repository_item_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_field_container_padding"
            android:background="@drawable/repository_item_background">

            <RelativeLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/login_edit_text_side_padding"
                    android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                    android:layout_marginTop="@dimen/login_edit_text_side_padding">

                    <ImageView
                        android:id="@+id/profile_image_view"
                        android:layout_width="@dimen/repository_item_image_size"
                        android:layout_height="@dimen/repository_item_image_size"
                        android:layout_centerVertical="true"
                        android:background="@color/colorDesignGrey"
                        android:src="@drawable/ic_logo" />


                    <TextView
                        android:id="@+id/creator_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/profile_image_view"
                        android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                        android:layout_marginRight="@dimen/login_edit_text_side_padding"
                        android:textColor="@color/colorDesignDarkGrey"
                        android:textStyle="bold"
                        android:textSize="@dimen/login_main_text_size"
                        android:text="@string/owner"/>
                    <TextView
                        android:id="@+id/profile_name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_below="@+id/creator_label"
                        android:layout_marginTop="@dimen/login_edit_text_side_padding"
                        android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                        android:layout_marginRight="@dimen/login_edit_text_side_padding"
                        android:layout_toRightOf="@+id/profile_image_view"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:text="@{model.ownerData.login}"
                        android:textColor="@color/colorDesignDarkGrey"
                        android:textSize="@dimen/login_main_text_size" />

                </RelativeLayout>
            </RelativeLayout>
            <View
                android:id="@+id/profile_seperator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_background_border_wight"
                android:layout_below="@+id/profile_container"
                android:background="@color/colorDesignDarkGrey" />
            <LinearLayout
                android:id="@+id/repository_data_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_text_side_padding"
                android:layout_marginBottom="@dimen/login_edit_text_side_padding"
                android:layout_below="@+id/profile_seperator"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repository_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image_view"
                    android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                    android:layout_marginRight="@dimen/login_edit_text_side_padding"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textStyle="bold"
                    android:textSize="@dimen/login_main_text_size"
                    android:text="@string/repository_name"/>

                <TextView
                    android:id="@+id/repository_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image_view"
                    android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                    android:layout_marginRight="@dimen/login_edit_text_side_padding"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size"
                    android:text="@{model.name}"/>

                <TextView
                    android:id="@+id/repository_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image_view"
                    android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                    android:layout_marginRight="@dimen/login_edit_text_side_padding"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textStyle="bold"
                    android:textSize="@dimen/login_main_text_size"
                    android:text="@string/repository_description"/>

                <TextView
                    android:id="@+id/repository_description_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image_view"
                    android:layout_marginLeft="@dimen/login_edit_text_side_padding"
                    android:layout_marginRight="@dimen/login_edit_text_side_padding"
                    android:textColor="@color/colorDesignDarkGrey"
                    android:textSize="@dimen/login_main_text_size"
                    android:text="@{model.description}"/>

            </LinearLayout>


        </RelativeLayout>

</layout>